# RBD_project

./: .gitignore  CMakeLists.txt  in.cpp  matplotlibcpp.h  system_of_bodies_class.cpp
src/: Tree_forward_dynamics.cpp  animation.cpp  bodies.cpp  bodies.h  data_types.cpp  data_types.h  hinge_map.cpp  hinge_map.h  legacy.cpp  main.cpp  math_utils.cpp  math_utils.h  plotting_utils.cpp  plotting_utils.h  system_of_bodies.cpp  system_of_bodies.h  system_of_bodies_class.cpp  system_of_bodies_forward_dynamics.cpp  system_of_bodies_inverse_dynamics.cpp  system_structure_utils.cpp  tests_utils.cpp  tests_utils.h
